--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "forever": "^3.0.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
